모듈 시스템 확장 중, 창고모듈 등 구현중 todo:현행 완료